[gd_scene load_steps=11 format=3 uid="uid://cso0ff8m2ljbs"]

[ext_resource type="Texture2D" uid="uid://bii2tlio8ltjj" path="res://assets/sprites/atom.png" id="1"]
[ext_resource type="Script" uid="uid://cdxv2s7vgep1f" path="res://actors/environments/ArkaBall.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bklnkitol1qwq" path="res://utils/AutoTrail.tscn" id="3"]
[ext_resource type="PackedScene" path="res://combat/traits/Strategic.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://yw0vjfqmdjje" path="res://godot4/traits/Waiter.tscn" id="6"]
[ext_resource type="AudioStream" uid="uid://cifoe1viahak1" path="res://assets/audio/FX/270315__littlerobotsoundfactory__menu-navigate-03.wav" id="7"]

[sub_resource type="PhysicsMaterial" id="1"]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id="2"]
radius = 100.0

[sub_resource type="Animation" id="3"]
resource_name = "Idle"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 180.0, 360.0]
}

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[node name="ArkaBall" type="RigidBody2D" groups=["in_camera"]]
collision_layer = 4
collision_mask = 16
mass = 4.0
physics_material_override = SubResource("1")
max_contacts_reported = 10
contact_monitor = true
can_sleep = false
linear_velocity = Vector2(-1, 1)
linear_damp = 3.0
script = ExtResource("2")

[node name="Waiter" parent="." instance=ExtResource("6")]

[node name="Strategic" parent="." instance=ExtResource("4")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")
volume_db = -5.0
bus = "SFX"

[node name="AutoTrail" parent="." instance=ExtResource("3")]
starting_color = Color(1, 1, 1, 0.235294)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource("3")
anims/RESET = SubResource("4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_ArkaBall_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
